--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -3,20 +3,21 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
+# Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # elma dontovska <elmadont@gmail.com>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2013
+# Valerie Hartman <valeriehartman22@gmail.com>, 2016
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-27 18:35+0000\n"
+"Last-Translator: Valerie Hartman <valeriehartman22@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -118,15 +119,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "Identification de Transaction Financière"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
-msgstr ""
+msgstr "Identification de Compte Financier"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Name"
-msgstr ""
+msgstr "Nom de Compte Financier"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
@@ -141,7 +142,7 @@ msgstr "Code type de compte"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
-msgstr ""
+msgstr "Description du Compte Financier"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Parent"
@@ -153,7 +154,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Deductible Financial Account?"
-msgstr ""
+msgstr "Compte Financier Déductible"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Tax Financial Account?"
@@ -169,15 +170,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account is Active"
-msgstr ""
+msgstr "Compte Financier est Actif"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Default Financial Account"
-msgstr ""
+msgstr "Compte Financier par Défaut"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "Identification de Transaction Financière"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
@@ -189,11 +190,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Date de Transaction Financière"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
-msgstr ""
+msgstr "Montant Total Financier"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Fee Amount"
@@ -201,11 +202,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Net Amount"
-msgstr ""
+msgstr "Montant Net Financier"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Currency"
-msgstr ""
+msgstr "Devise Financière"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
@@ -391,7 +392,7 @@ msgstr "Tâche"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- actions - "
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -482,7 +483,7 @@ msgstr "Nombre de transactions"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Sélectionnez un contact valide."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
@@ -945,7 +946,7 @@ msgstr "Il n'y a pas de compte affecté à ce type d'opération. Vous pouvez <a 
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Méthode de Paiement : "
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
