--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -6,13 +6,14 @@
 # Calbasi <joan@calbasi.net>, 2013
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2012
+# ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 09:59+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-27 12:04+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -135,7 +136,7 @@ msgstr "Sol·licituds de cancel·lació de subscripcions"
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: ang/crmMailing/services.js templates/CRM/Mailing/Page/Report.tpl
 msgid "Forwards"
-msgstr ""
+msgstr "Reenviaments"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing Name(s)"
@@ -143,7 +144,7 @@ msgstr "Noms dels mailings"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Status"
-msgstr ""
+msgstr "Estat del treball programat d'enviament de correus electrònics massiu"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce Types"
@@ -1028,7 +1029,7 @@ msgstr ""
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Successful "
-msgstr ""
+msgstr "Exitós"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Bounced "
