--- a/po/de_DE/campaign.po
+++ b/po/de_DE/campaign.po
@@ -6,7 +6,7 @@
 # translatosaurus <accounts@drexler.eu>, 2012
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2015
-# Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2014-2016
 # Fabian <schuttenberg@systopia.de>, 2014-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Michal Seidler, 2011
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-17 10:39+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-08-16 08:24+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -142,7 +142,7 @@ msgstr "<b>Umfrage</b> ID"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Campaign ID"
-msgstr ""
+msgstr "Umfragekampagnenkennung"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Follow up Interval"
@@ -170,23 +170,23 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Is Default Survey"
-msgstr ""
+msgstr "Ist Standardumfrage"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
-msgstr ""
+msgstr "Umfrage erstellt von"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified"
-msgstr ""
+msgstr "Umfrage geändert"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Umfrage geändert am"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
-msgstr ""
+msgstr "Keine E-Mail-Bestätigung"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
