--- a/po/te/common-base.po
+++ b/po/te/common-base.po
@@ -5,13 +5,14 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # వీవెన్ <veeven@gmail.com>, 2011
+# వీవెన్ <veeven@gmail.com>, 2016
 # వీవెన్ <veeven@gmail.com>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-03 14:40+0000\n"
+"Last-Translator: వీవెన్ <veeven@gmail.com>\n"
 "Language-Team: Telugu (http://www.transifex.com/civicrm/civicrm/language/te/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,7 +50,7 @@ msgstr ""
 
 #: CRM/ACL/BAO/ACL.php
 msgid "Import"
-msgstr ""
+msgstr "దిగుమతి"
 
 #: CRM/ACL/BAO/ACL.php CRM/Activity/Selector/Activity.php
 #: CRM/Contact/BAO/Contact/Utils.php CRM/Contact/Page/View/Note.php
@@ -607,7 +608,7 @@ msgstr ""
 
 #: CRM/Activity/BAO/Activity.php
 msgid "%1 more"
-msgstr ""
+msgstr "ఇంకా %1"
 
 #: CRM/Activity/BAO/ActivityAssignment.php
 msgid "Activity Assignee"
@@ -9897,27 +9898,27 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Day"
-msgstr ""
+msgstr "రోజు"
 
 #: CRM/Core/SelectValues.php
 msgid "Week"
-msgstr ""
+msgstr "వారం"
 
 #: CRM/Core/SelectValues.php
 msgid "Month"
-msgstr ""
+msgstr "నెల"
 
 #: CRM/Core/SelectValues.php
 msgid "Year"
-msgstr ""
+msgstr "సంవత్సరం"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Payment"
-msgstr ""
+msgstr "చెల్లింపు"
 
 #: CRM/Core/SelectValues.php
 msgid "Report"
-msgstr ""
+msgstr "నివేదిక"
 
 #: CRM/Core/SelectValues.php
 msgid "Daily"
@@ -9994,14 +9995,14 @@ msgstr ""
 #: CRM/Core/SelectValues.php
 msgid "hour"
 msgid_plural "hours"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "గంట"
+msgstr[1] "గంటలు"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "week"
 msgid_plural "weeks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "వారం"
+msgstr[1] "వారాలు"
 
 #: CRM/Core/ShowHideBlocks.php templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
@@ -20328,7 +20329,7 @@ msgstr ""
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Name/Email"
-msgstr ""
+msgstr "పేరు/ఈమెయిలు"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Restore CiviCRM Menu"
@@ -22079,23 +22080,23 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "1"
-msgstr ""
+msgstr "1"
 
 #: xml/templates/civicrm_data.tpl
 msgid "2"
-msgstr ""
+msgstr "2"
 
 #: xml/templates/civicrm_data.tpl
 msgid "3"
-msgstr ""
+msgstr "3"
 
 #: xml/templates/civicrm_data.tpl
 msgid "4"
-msgstr ""
+msgstr "4"
 
 #: xml/templates/civicrm_data.tpl
 msgid "5"
-msgstr ""
+msgstr "5"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Letter"
@@ -23304,7 +23305,7 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "List of Languages"
-msgstr ""
+msgstr "భాషల జాబితా"
 
 #: xml/templates/languages.tpl
 msgid "Abkhaz"
@@ -23472,19 +23473,19 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "English (Australia)"
-msgstr ""
+msgstr "ఆంగ్లం (ఆస్ట్రేలియా)"
 
 #: xml/templates/languages.tpl
 msgid "English (Canada)"
-msgstr ""
+msgstr "ఆంగ్లం (కెనడా)"
 
 #: xml/templates/languages.tpl
 msgid "English (United Kingdom)"
-msgstr ""
+msgstr "ఆంగ్లం (యునైటెడ్ కింగ్‌డమ్)"
 
 #: xml/templates/languages.tpl
 msgid "English (United States)"
-msgstr ""
+msgstr "ఆంగ్లం (అమెరికా)"
 
 #: xml/templates/languages.tpl
 msgid "Esperanto"
@@ -23548,7 +23549,7 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "Gujarati"
-msgstr ""
+msgstr "గుజరాతీ"
 
 #: xml/templates/languages.tpl
 msgid "Haitian; Haitian Creole"
@@ -23568,7 +23569,7 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "Hindi"
-msgstr ""
+msgstr "హిందీ"
 
 #: xml/templates/languages.tpl
 msgid "Hiri Motu"
@@ -23942,7 +23943,7 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "Sundanese"
-msgstr ""
+msgstr "సూడానీ"
 
 #: xml/templates/languages.tpl
 msgid "Swahili"
@@ -23958,11 +23959,11 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "Tamil"
-msgstr ""
+msgstr "తమిళం"
 
 #: xml/templates/languages.tpl
 msgid "Telugu"
-msgstr ""
+msgstr "తెలుగు"
 
 #: xml/templates/languages.tpl
 msgid "Tajik"
