--- a/po/ar_EG/admin.po
+++ b/po/ar_EG/admin.po
@@ -12,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -1018,10 +1018,6 @@ msgstr ""
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
 msgstr ""
-
-#: CRM/Admin/Form/ScheduleReminders.php
-msgid "From Email"
-msgstr "البريد الإلكتروني للمرسل"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
@@ -6438,6 +6434,14 @@ msgid ""
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
 msgstr ""
 
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Upload Document"
+msgstr ""
+
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Please upload document"
+msgstr ""
+
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
 msgstr ""
@@ -6462,8 +6466,8 @@ msgstr ""
 msgid "Top level"
 msgstr ""
 
-#: CRM/Admin/Form/Preferences/Contribute.php
-msgid "Enable Access Control by Financial Type"
+#: CRM/Admin/Form/Options.php
+msgid "Value field Data Type mismatch"
 msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
@@ -6510,6 +6514,10 @@ msgstr ""
 msgid "Use language in use at the time"
 msgstr ""
 
+#: CRM/Admin/Form/Setting/Miscellaneous.php
+msgid "Illegal stack size. Use values between 1 and %1."
+msgstr ""
+
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
 msgstr ""
@@ -6521,6 +6529,10 @@ msgstr ""
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
+msgstr ""
+
+#: ang/crmCxn/ManageCtrl.js
+msgid "%1: Welcome (External)"
 msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
@@ -6573,6 +6585,16 @@ msgstr ""
 msgid "Leave blank to run at next run frequency."
 msgstr ""
 
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid ""
+"Compose a message on-screen for general use in emails or document output, or"
+" upload a pre-composed document for mail-merge."
+msgstr ""
+
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid "Upload the document in .docx or .odt format."
+msgstr ""
+
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
 msgstr ""
@@ -6582,6 +6604,13 @@ msgid ""
 "Enabling Access Control by Financial Types is only required if you need users in one role to access some financial transactions but not ones with certain financial types.</p>\n"
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Preferences/Contribute.tpl
+msgid ""
+"Changing the Prior Financial Period may result in problems calculating "
+"closing account balances accurately and / or exporting of financial "
+"transactions. Do you want to proceed?"
 msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
@@ -6657,6 +6686,14 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
+"In order to use this functionality, the installation's database user must "
+"have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
+"5.1 if binary logging is enabled – this means the SUPER privilege). This "
+"install either does not seem to have the required privilege enabled."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Setting/Localization.tpl
+msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
 msgstr ""
@@ -6668,6 +6705,12 @@ msgid ""
 "Please read the %1 documentation, and make sure you understand it before "
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
+msgid ""
+"If enabled, CiviCRM will allow users to submit profiles from external sites."
+" This is disabled by default to limit abuse."
 msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
