--- a/po/de_DE/countries.po
+++ b/po/de_DE/countries.po
@@ -6,15 +6,15 @@
 # Alain Schaefer <alain.schaefer@gmail.com>, 2016
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011
 # Michal Seidler, 2012
-# Malek <Irek@malek.de>, 2012
+# Malek, 2012
 # Martin Peth <peth@systopia.de>, 2013
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:41+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1050,3 +1050,23 @@ msgstr "Saint-Barthélemy"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "Saint Martin (französischer Teil)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr ""
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr ""
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr ""
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr ""
