--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -28,9 +28,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-28 15:02+0000\n"
-"Last-Translator: BFPTC <webmaster@bienfaitpourta.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:43+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1034,10 +1034,6 @@ msgstr "Condition d'action"
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
 msgstr "Condition de répétition"
-
-#: CRM/Admin/Form/ScheduleReminders.php
-msgid "From Email"
-msgstr "Courriel de"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
@@ -6454,6 +6450,14 @@ msgid ""
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
 msgstr "Les valeurs relatives du mois sont calculés en fonction de la durée qu'elles traverse au cours du (des) mois.\nLe résultat va tomber sur le même jour du mois, sauf pour les jours 29- 31 lorsque la cible du mois contient moin de jours que le mois précédent.\nPar exemple, si un travail est planifié pour être exécuté le 31 Août, l'invocation suivante aura lieu le 1er Octobre, puis le 1er de chaque mois qui suit.\nPour éviter ce problème, il faut planifier les travaux d'une maniére mensuels et trimestriels afin de les lancer dans les 28 premiers jours du mois."
 
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Upload Document"
+msgstr ""
+
+#: CRM/Admin/Form/MessageTemplates.php
+msgid "Please upload document"
+msgstr ""
+
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
 msgstr "Menu d'élément"
@@ -6478,9 +6482,9 @@ msgstr "Séparateur"
 msgid "Top level"
 msgstr "Haut niveau"
 
-#: CRM/Admin/Form/Preferences/Contribute.php
-msgid "Enable Access Control by Financial Type"
-msgstr "Activer le contrôle d'accès par le type financier"
+#: CRM/Admin/Form/Options.php
+msgid "Value field Data Type mismatch"
+msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
@@ -6526,6 +6530,10 @@ msgstr ""
 msgid "Use language in use at the time"
 msgstr ""
 
+#: CRM/Admin/Form/Setting/Miscellaneous.php
+msgid "Illegal stack size. Use values between 1 and %1."
+msgstr ""
+
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
 msgstr ""
@@ -6537,6 +6545,10 @@ msgstr ""
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
+msgstr ""
+
+#: ang/crmCxn/ManageCtrl.js
+msgid "%1: Welcome (External)"
 msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
@@ -6589,6 +6601,16 @@ msgstr ""
 msgid "Leave blank to run at next run frequency."
 msgstr ""
 
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid ""
+"Compose a message on-screen for general use in emails or document output, or"
+" upload a pre-composed document for mail-merge."
+msgstr ""
+
+#: templates/CRM/Admin/Form/MessageTemplates.tpl
+msgid "Upload the document in .docx or .odt format."
+msgstr ""
+
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
 msgstr ""
@@ -6598,6 +6620,13 @@ msgid ""
 "Enabling Access Control by Financial Types is only required if you need users in one role to access some financial transactions but not ones with certain financial types.</p>\n"
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Preferences/Contribute.tpl
+msgid ""
+"Changing the Prior Financial Period may result in problems calculating "
+"closing account balances accurately and / or exporting of financial "
+"transactions. Do you want to proceed?"
 msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
@@ -6673,6 +6702,14 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
+"In order to use this functionality, the installation's database user must "
+"have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
+"5.1 if binary logging is enabled – this means the SUPER privilege). This "
+"install either does not seem to have the required privilege enabled."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Setting/Localization.tpl
+msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
 msgstr ""
@@ -6684,6 +6721,12 @@ msgid ""
 "Please read the %1 documentation, and make sure you understand it before "
 "modifying default values. (These settings are NOT used for the built-in "
 "'Email - send now' feature)."
+msgstr ""
+
+#: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
+msgid ""
+"If enabled, CiviCRM will allow users to submit profiles from external sites."
+" This is disabled by default to limit abuse."
 msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
