--- a/po/tr_TR/countries.po
+++ b/po/tr_TR/countries.po
@@ -5,15 +5,15 @@
 # Translators:
 # ayhan alkaya <alkayaayhan@yandex.com>, 2013
 # falcon <falconidea@hotmail.com>, 2013
-# Kaya Zeren <kayazeren@gmail.com>, 2014-2015
+# Kaya Zeren <kayazeren@gmail.com>, 2014-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Selim Şumlu <selim@sum.lu>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 01:49+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1048,3 +1048,23 @@ msgstr "Saint Barthélemy"
 msgctxt "country"
 msgid "Saint Martin (French part)"
 msgstr "Saint Martin (Fransız bölümü)"
+
+msgctxt "country"
+msgid "Virgin Islands,British"
+msgstr "Virgin Adaları,British"
+
+msgctxt "country"
+msgid "Côte d’Ivoire"
+msgstr "Fildişi Sahili"
+
+msgctxt "country"
+msgid "Iran, Islamic Republic Of"
+msgstr "İran İslam Cumhuriyeti"
+
+msgctxt "country"
+msgid "Macedonia, Republic Of"
+msgstr "Makedonya Cumhuriyeti"
+
+msgctxt "country"
+msgid "Palestinian Territory"
+msgstr "Filistin Özerk Bölgesi"
