--- a/po/tr_TR/menu.po
+++ b/po/tr_TR/menu.po
@@ -13,8 +13,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 09:40+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 01:47+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -2158,9 +2158,19 @@ msgctxt "menu"
 msgid "Payment Methods"
 msgstr "Ödeme Yöntemleri"
 
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Close Accounting Period"
+msgstr "Muhasebe Dönemini Kapatın"
+
 msgctxt "menu"
 msgid "Configure CKEditor"
 msgstr "CKEditör Ayarları"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviCRM Resources"
+msgstr "CiviCRM Kaynakları"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2192,6 +2202,11 @@ msgstr "Bileşenler"
 msgctxt "menu"
 msgid "Extensions"
 msgstr "Eklentiler"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "My Reports"
+msgstr "Raporlarım"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
