--- a/po/tr_TR/financial.po
+++ b/po/tr_TR/financial.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 07:43+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-06 02:06+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -940,6 +940,43 @@ msgstr "Bu mali tür ile ilişkilendirilmiş bir mali hesap bulunamadı. Siz <a 
 msgid "Payment Method:"
 msgstr "Ödeme Yöntemi:"
 
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"You cannot change the account type since this financial account refers to a "
+"financial item having an account type of Revenue/Liability."
+msgstr ""
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Revenue recognition date can only be specified if the financial type "
+"selected has a deferred revenue account configured. Please have an "
+"administrator set up the deferred revenue account at Administer > "
+"CiviContribute > Financial Accounts, then configure it for financial types "
+"at Administer > CiviContribution > Financial Types, Accounts"
+msgstr ""
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Deferred revenue account is not configured for selected financial type. "
+"Please have an administrator set up the deferred revenue account at "
+"Administer > CiviContribute > Financial Accounts, then configure it for "
+"financial types at Administer > CiviContribution > Financial Types, Accounts"
+msgstr ""
+
+#: CRM/Financial/BAO/FinancialAccount.php
+msgid ""
+"Before Deferred Revenue can be enabled, a Deferred Revenue Account relationship must be defined for all financial types currently used for Memberships and Events, including\n"
+"<ul>\n"
+"<li>those specified for each membership type at Admin > CiviMember > Membership Types, edit</li>\n"
+"<li>on the Fees tab when managing events</li>\n"
+"<li>the default financial type associated with a membership or event price set</li>\n"
+"<li>the financial type for a membership price set field option when the membership type is non-blank</li>\n"
+"<li>as the financial type for a price set field with participant count > 0</li>\n"
+"<li>as the financial type for a price set field option with participant count > 0</li>\n"
+"</ul>\n"
+"In other words, please create deferred revenue accounts at Administer > CiviContribute > Financial Accounts, then configure them for the following financial types at Administer > CiviContribute > Financial Types, accounts:"
+msgstr ""
+
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
 "Changing the name of a Financial Type will result in losing the current permissions associated with that Financial Type.\n"
@@ -955,6 +992,10 @@ msgstr "CiviCRM Mali Türler Yönetimi"
 #: CRM/Financial/BAO/FinancialType.php
 msgid "Administer access to Financial Types"
 msgstr "Mali Türler Erişim Yönetimi"
+
+#: CRM/Financial/BAO/FinancialTypeAccount.php
+msgid "This financial account cannot have '%1' relationship."
+msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
@@ -975,6 +1016,15 @@ msgstr "Tam Para Birimi Adı"
 #: CRM/Financial/DAO/EntityFinancialAccount.php
 msgid "Entity Financial Account ID"
 msgstr "Varlık Mali Hesap Kodu"
+
+#: CRM/Financial/DAO/FinancialAccount.php
+#: CRM/Financial/Form/FinancialAccount.php
+msgid "Opening Balance"
+msgstr "Açılış Bakiyesi"
+
+#: CRM/Financial/DAO/FinancialAccount.php
+msgid "Current period opening Balance"
+msgstr "Geçerli Dönemin Açılış Bakiyesi"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
@@ -1012,6 +1062,10 @@ msgstr "Ödeme"
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP class name implementation"
 msgstr "PHP sınıf adı uyarlamasının son eki"
+
+#: CRM/Financial/Form/FinancialAccount.php
+msgid "Current Period Opening Balance"
+msgstr "Geçerli Dönemin Açılış Bakiyesi"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
