--- a/po/zh_CN/provinces.po
+++ b/po/zh_CN/provinces.po
@@ -29,9 +29,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-25 14:36+0000\n"
-"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15748,9 +15748,33 @@ msgid "Phuket"
 msgstr "普吉岛"
 
 msgctxt "province"
+msgid "Wake Island"
+msgstr ""
+
+msgctxt "province"
 msgid "Northern Ostrobothnia"
 msgstr "北博滕区"
 
 msgctxt "province"
 msgid "Telangana"
+msgstr ""
+
+msgctxt "province"
+msgid "Guadeloupe"
+msgstr ""
+
+msgctxt "province"
+msgid "Martinique"
+msgstr ""
+
+msgctxt "province"
+msgid "Guyane"
+msgstr ""
+
+msgctxt "province"
+msgid "La Réunion"
+msgstr ""
+
+msgctxt "province"
+msgid "Mayotte"
 msgstr ""
