--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 12:55+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2065,15 +2065,15 @@ msgstr ""
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Print to PDF"
-msgstr ""
+msgstr "Imprimeix a un PDF"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Export as CSV"
-msgstr ""
+msgstr "Exporta com un CSV"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Elimina l'inform"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid ""
@@ -2278,7 +2278,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "Visualitza els resultats"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
@@ -2342,7 +2342,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Desenvolupador"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
@@ -2362,11 +2362,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
-msgstr ""
+msgstr "Actualitza els resultats"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Visualitza els resultats"
 
 #: CRM/Report/Info.php
 msgid "administer private reports"
