--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 16:08+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26569,11 +26569,11 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Show %1 entries"
-msgstr ""
+msgstr "%1 Einträge anzeigen"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
-msgstr ""
+msgstr "%1 nicht gefunden."
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Did you mean to search by Name/Email instead?"
@@ -26681,7 +26681,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Textarea"
-msgstr ""
+msgstr "Textfeld"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Credit/Contra Revenue Account is"
@@ -26737,31 +26737,31 @@ msgstr "Vorheriges Kalenderjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 7 days including today"
-msgstr ""
+msgstr "Letzte 7 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 30 days including today"
-msgstr ""
+msgstr "Letzte 30 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 60 days including today"
-msgstr ""
+msgstr "Letzte 60 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 90 days including today"
-msgstr ""
+msgstr "Letzte 90 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 12 months including today"
-msgstr ""
+msgstr "Letzte 12 Monate einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 2 years including today"
-msgstr ""
+msgstr "Letzte 2 Jahre einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 3 years including today"
-msgstr ""
+msgstr "Letzte 3 Jahre einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
@@ -26785,23 +26785,23 @@ msgstr "Nächstes Kalenderjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 7 days including today"
-msgstr ""
+msgstr "Nächste 7 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 30 days including today"
-msgstr ""
+msgstr "Nächste 30 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 60 days including today"
-msgstr ""
+msgstr "Nächste 60 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 90 days including today"
-msgstr ""
+msgstr "Nächste 90 Tage einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 12 months including today"
-msgstr ""
+msgstr "Nächste 12 Monate einschließlich heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current week to-date"
@@ -26897,7 +26897,7 @@ msgstr "Vorherige 2 Kalenderjahre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Day prior to yesterday"
-msgstr ""
+msgstr "Vorgestern"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Week prior to previous week"
@@ -26974,7 +26974,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (pay later)"
-msgstr ""
+msgstr "Unerledigt (später zahlen)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (incomplete transaction)"
