--- a/po/de_DE/countries.po
+++ b/po/de_DE/countries.po
@@ -5,6 +5,7 @@
 # Translators:
 # Alain Schaefer <alain.schaefer@gmail.com>, 2016
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011
+# Ettore Atalan <atalanttore@googlemail.com>, 2016
 # Michal Seidler, 2012
 # Malek, 2012
 # Martin Peth <peth@systopia.de>, 2013
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 16:05+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1053,20 +1054,20 @@ msgstr "Saint Martin (französischer Teil)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Jungferninseln, Britisch"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Elfenbeinküste"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Iran, Islamische Republik"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Mazedonien, Republik"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Palästinensische Gebiete"
