--- a/po/ta/countries.po
+++ b/po/ta/countries.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 15:22+0000\n"
+"Last-Translator: Ilagnayeru (MIG) Manickam <mig.tamil@gmail.com>\n"
 "Language-Team: Tamil (http://www.transifex.com/civicrm/civicrm/language/ta/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1049,20 +1049,20 @@ msgstr "செயிண்ட் மார்டின் (பிரெஞ்ச
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "விர்ஜின் தீவுகள், பிரித்தானிய"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "கோட் டிவார்"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "ஈரான் இசுலாமியக் குடியரசு"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "மாக்கடோனியக் குடியரசு"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "பாலஸ்தீன மண்டலம்"
