--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-06 10:55+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2876,7 +2876,7 @@ msgstr ""
 msgid ""
 "Address field values are taken from the contact's <strong>primary</strong> "
 "location."
-msgstr ""
+msgstr "Adressfältens värden hämtas från kontaktens <strong>primära</strong> adresstyp."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid ""
